# docs/swagger.yaml
@@ -103,6 +103,11 @@ definitions:
     - address
     - type
     type: object
+  dto.AuthSendVerifyResponse:
+    properties:
+      otp_expires_at:
+        type: string
+    type: object
   dto.AuthSession:
     properties:
       created_at:
@@ -130,6 +135,21 @@ definitions:
         items:
           $ref: '#/definitions/dto.AuthSession'
         type: array
+    type: object
+  dto.AuthUpdatePasswordRequest:
+    properties:
+      new_password:
+        minLength: 8
+        type: string
+      old_password:
+        type: string
+      user_id:
+        example: 1
+        type: integer
+    required:
+    - new_password
+    - old_password
+    - user_id
     type: object
   dto.UserResponse:
     properties:
@@ -165,13 +185,20 @@ paths:
     post:
       consumes:
       - application/json
+      parameters:
+      - description: Request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.AuthConfirmVerifyRequest'
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: ok
           schema:
-            $ref: '#/definitions/dto.AuthConfirmVerifyRequest'
+            type: string
         "400":
           description: bad request
           schema:
@@ -279,13 +306,20 @@ paths:
     post:
       consumes:
       - application/json
+      parameters:
+      - description: Request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.AuthSendVerifyRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.AuthSendVerifyRequest'
+            $ref: '#/definitions/dto.AuthSendVerifyResponse'
         "401":
           description: authentication failed
           schema:
@@ -343,6 +377,37 @@ paths:
       security:
       - BearerAuth: []
       summary: Revoke session by jti, only user can revoke his own session
+      tags:
+      - Auth
+  /auth/update-password:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.AuthUpdatePasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+        "400":
+          description: bad request
+          schema:
+            type: string
+        "401":
+          description: authentication failed
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Update user password for authenticated user
       tags:
       - Auth
   /users/search:
